--- a/genainatural_summarize_text.ipynb
+++ b/genainatural_summarize_text.ipynb
@@ -61,8 +61,8 @@
         "\n",
         "# create a client to interact with the API\n",
         "aiplatform.init(\n",
-        "    project= \"nodal-rex-396806\",\n",
-        "    location= \"us-central1\",\n",
+        "    project= \"project-id\",\n",
+        "    location= \"project-location\",\n",
         ")\n",
         "\n",
         "text_generation_model = TextGenerationModel.from_pretrained(\"text-bison@001\")\n",
